# Quoto

./: .gitignore  LICENSE  PROJECT_ANALYSIS.md  README.md  index.html  package-lock.json  package.json  size-preview.html  tailwind.config.js  vite.config.ts
docs/superpowers/plans/: 2026-03-16-font-picker-feature.md  2026-03-16-font-picker-search-plan.md  2026-03-16-json-style-config.md  2026-03-21-font-picker-inline-system-fonts.md  2026-03-21-input-panel-scroll-fix.md  2026-03-22-blur-background-v3-plan.md  2026-03-22-book-cover-background-plan.md  2026-03-22-edge-detection-background-plan.md
docs/superpowers/previews/: edge-detection-background.html
docs/superpowers/specs/: 2026-03-16-font-picker-search-design.md  2026-03-16-style-picker-tabs-design.md  2026-03-21-font-picker-system-fonts-inline-design.md  2026-03-21-input-panel-scroll-fix.md  2026-03-22-book-cover-background-design.md  2026-03-22-book-cover-blur-background-design.md  (+2 more)
scripts/: generate-icons.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CardCanvas.tsx  FontPicker.tsx  InputPanel.tsx  PreviewPanel.actions.ts  PreviewPanel.tsx  StylePicker.data.ts  StylePicker.tsx
src/components/ui/: input.tsx  (+1 more)
src/data/: fonts.json  fonts.json.d.ts  sampleQuotes.ts  styles.json  styles.json.d.ts
src/hooks/: useFontDetector.ts
src/lib/: tauri.ts  utils.ts
src/types/: index.ts
src/utils/: backgroundCache.ts  cardRenderer.ts  cardSizeCalculator.ts  colorUtils.ts  coverDecision.ts  coverExtractor.ts
(+1 files in other folders)
